--- a/SteamBus.App/SteamBus.csproj
+++ b/SteamBus.App/SteamBus.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SteamKit2" Version="2.5.0" />
+    <PackageReference Include="SteamKit2" Version="3.0.0" />
+    <PackageReference Include="protobuf-net" Version="3.2.45" />
     <PackageReference Include="System.IO.Hashing" Version="8.0.0" />
     <PackageReference Include="Tmds.DBus" Version="0.18.0" />
     <PackageReference Include="ValveKeyValue" Version="0.11.0.378" />
