--- a/SteamBus.App/SteamBus.csproj
+++ b/SteamBus.App/SteamBus.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="SteamKit2" Version="3.0.1" />
     <PackageReference Include="protobuf-net" Version="3.2.45" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
     <PackageReference Include="System.IO.Hashing" Version="9.0.0" />
     <PackageReference Include="Tmds.DBus" Version="0.18.0" />
     <PackageReference Include="ValveKeyValue" Version="0.11.0.378" />
