--- a/SteamBus.App/SteamBus.csproj
+++ b/SteamBus.App/SteamBus.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>0.1.0.0</Version>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +16,12 @@
     <PackageReference Include="Tmds.DBus" Version="0.18.0" />
     <PackageReference Include="ValveKeyValue" Version="0.11.0.378" />
     <PackageReference Include="Xdg.Directories" Version="0.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="pluginmanifest.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
