--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -21,17 +21,19 @@ plugins:
     - replacements:
         - files:
             - SteamBus.App/SteamBus.csproj
-          from: '^<Version>.*</Version>$'
-          to: '<Version>${nextRelease.version}</Version>'
+          from: "^<Version>.*</Version>$"
+          to: "<Version>${nextRelease.version}</Version>"
         - files:
             - SteamBus.App/steam-bus.spec
-          from: '^Version: .*$'
-          to: 'Version: ${nextRelease.version}'
+          from: "^Version: .*$"
+          to: "Version: ${nextRelease.version}"
 
   # Execute commands to build the project
   - - "@semantic-release/exec"
     - shell: true
-      prepareCmd: "make in-docker TARGET='build-release rpm'"
+      prepareCmd: |
+        make in-docker TARGET='tar rpm'
+        make in-docker TARGET='tar rpm' ARCH="aarch64"
       publishCmd: "echo '${nextRelease.version}' > .version.txt"
 
   # Commit the following changes to git after other plugins have run
@@ -45,3 +47,4 @@ plugins:
     - assets:
         - path: SteamBus-*.rpm
         - path: SteamBus-*.tar.gz
+
