feat: initial achievements implementation

--- a/SteamBus.App/SteamBus.csproj
+++ b/SteamBus.App/SteamBus.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="SteamKit2" Version="3.2.0" />
     <PackageReference Include="protobuf-net" Version="3.2.52" />
+    <PackageReference Include="Steamworks.NET" Version="2024.8.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
     <PackageReference Include="System.IO.Hashing" Version="9.0.4" />
     <PackageReference Include="Tmds.DBus" Version="0.18.0" />
