--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -4,7 +4,8 @@
 # Any merges into branches that match these patterns will trigger a release.
 branches:
   - name: main
-  #- name: 'v+([0-9])?(.{+([0-9]),x}).x'
+  - name: "1.26.x"
+    prerelease: false
 
 # These plugins will run when a release is triggered. They will analyze commit
 # messages to determine what kind of release this is and publish a new release.
@@ -47,4 +48,3 @@ plugins:
     - assets:
         - path: SteamBus-*.rpm
         - path: SteamBus-*.tar.gz
-
